--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
 }
 .info {
   background: rgb(250, 188, 115) no-repeat;
-  font-family: 'StardewFont';
+  /*font-family: 'StardewFont';*/
   border: 5px groove rgb(196, 108, 26);
   border-radius: 5px;
 }
